<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.fitur.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.search.SearchFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.ingredients_detail.IngredientsDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/activity_ingredients_detail" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.fitur.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_discuss"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.fitur.diskusi.DiscussionFragment"
        android:label="fragment_discussion"
        tools:layout="@layout/fragment_discussion" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.fitur.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.fitur.profile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />



</navigation>